[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://Teleport.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameHarder.gd" type="Script" id=3]
[ext_resource path="res://Cold.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hot.tscn" type="PackedScene" id=5]

[node name="GameHarder" type="Node"]
script = ExtResource( 3 )

[node name="Main" parent="." instance=ExtResource( 1 )]

[node name="Teleport1" parent="." instance=ExtResource( 2 )]

[node name="Teleport2" parent="." instance=ExtResource( 2 )]

[node name="Hot" parent="." instance=ExtResource( 5 )]

[node name="Cold" parent="." instance=ExtResource( 4 )]

[node name="TimerTP" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerHC" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="Teleport1" to="." method="_on_Teleport1_body_entered"]
[connection signal="body_entered" from="Teleport2" to="." method="_on_Teleport2_body_entered"]
[connection signal="start_timer" from="Hot" to="." method="_on_Hot_start_timer"]
[connection signal="start_timer2" from="Cold" to="." method="_on_Cold_start_timer2"]
[connection signal="timeout" from="TimerTP" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerHC" to="." method="_on_TimerHC_timeout"]
